--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.1",
     "redux-act": "^1.7.4"
