--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "react-redux": "^5.0.7",
+    "react-tooltip": "^3.9.0",
     "redux": "^4.0.1",
     "redux-act": "^1.7.4"
   }
