--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
+    "react-js-pagination": "^3.0.2",
     "react-redux": "^5.0.7",
     "react-tooltip": "^3.9.0",
     "redux": "^4.0.1",
